--- a/online-experience.html
+++ b/online-experience.html
@@ -17853,7 +17853,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor_invalid,
                                                                                 var(
-                                                                                  --f-p-k-v-lb
+                                                                                  --light-danger-color
                                                                                 )
                                                                               );
                                                                               border-radius: 8px
@@ -17914,25 +17914,25 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
