--- a/products.html
+++ b/products.html
@@ -17882,7 +17882,7 @@
                                                                               background: var(
                                                                                 --comboInputGroup_backgroundColor_invalid,
                                                                                 var(
-                                                                                  --f-p-k-v-lb
+                                                                                  --light-danger-color
                                                                                 )
                                                                               );
                                                                               border-radius: 8px
@@ -17943,25 +17943,25 @@
                                                                               border-top-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-right-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-bottom-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-left-color: var(
                                                                                 --comboInputGroup_borderColor_invalid,
                                                                                 var(
-                                                                                  --k-va-tnc
+                                                                                  --danger-color
                                                                                 )
                                                                               );
                                                                               border-width: 1px;
