--- a/wishlist.html
+++ b/wishlist.html
@@ -359,7 +359,7 @@
                                                           </div>
                                                           <div class="place__img-heart-btn dir dir-ltr">
                                                             <button aria-label="Remove listing from a list" type="button" class="explore__list-heart explore__list-heart-font dir dir-ltr">
-                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--ihf-tp-q); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
+                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--primary-color); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
                                                                 <path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
                                                                 </path>
                                                               </svg>
@@ -593,7 +593,7 @@
                                                           </div>
                                                           <div class="place__img-heart-btn dir dir-ltr">
                                                             <button aria-label="Remove listing from a list" type="button" class="explore__list-heart explore__list-heart-font dir dir-ltr">
-                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--ihf-tp-q); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
+                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--primary-color); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
                                                                 <path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
                                                                 </path>
                                                               </svg>
@@ -885,7 +885,7 @@
                                                           </div>
                                                           <div class="place__img-heart-btn dir dir-ltr">
                                                             <button aria-label="Remove listing from a list" type="button" class="explore__list-heart explore__list-heart-font dir dir-ltr">
-                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--ihf-tp-q); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
+                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--primary-color); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
                                                                 <path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
                                                                 </path>
                                                               </svg>
@@ -1137,7 +1137,7 @@
                                                           </div>
                                                           <div class="place__img-heart-btn dir dir-ltr">
                                                             <button aria-label="Remove listing from a list" type="button" class="explore__list-heart explore__list-heart-font dir dir-ltr">
-                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--ihf-tp-q); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
+                                                              <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--primary-color); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
                                                                 <path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
                                                                 </path>
                                                               </svg>
@@ -1415,7 +1415,7 @@
                                                               </div>
                                                               <div class="explore__list-pointer-event-auto dir dir-ltr">
                                                                 <button aria-label="Unsave this Experience" type="button" class="explore__list-heart explore__list-heart-font dir dir-ltr">
-                                                                  <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--ihf-tp-q); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
+                                                                  <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--primary-color); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
                                                                     <path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
                                                                     </path>
                                                                   </svg>
@@ -1529,7 +1529,7 @@
                                                               </div>
                                                               <div class="explore__list-pointer-event-auto dir dir-ltr">
                                                                 <button aria-label="Unsave this Experience" type="button" class="explore__list-heart explore__list-heart-font dir dir-ltr">
-                                                                  <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--ihf-tp-q); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
+                                                                  <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--primary-color); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
                                                                     <path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
                                                                     </path>
                                                                   </svg>
@@ -1629,7 +1629,7 @@
                                                               </div>
                                                               <div class="explore__list-pointer-event-auto dir dir-ltr">
                                                                 <button aria-label="Unsave this Experience" type="button" class="explore__list-heart explore__list-heart-font dir dir-ltr">
-                                                                  <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--ihf-tp-q); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
+                                                                  <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: var(--primary-color); height: 24px; width: 24px; stroke: var(--white); stroke-width: 2; overflow: visible;">
                                                                     <path d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
                                                                     </path>
                                                                   </svg>
@@ -2490,10 +2490,10 @@
                                                   focusable="false"
                                                   style="
                                                     display: block;
-                                                    fill: var(--ihf-tp-q);
+                                                    fill: var(--primary-color);
                                                     height: 24px;
                                                     width: 24px;
-                                                    stroke: var(--ihf-tp-q);
+                                                    stroke: var(--primary-color);
                                                     stroke-width: 2;
                                                     overflow: visible;
                                                   "
@@ -3138,10 +3138,10 @@
                                                   focusable="false"
                                                   style="
                                                     display: block;
-                                                    fill: var(--ihf-tp-q);
+                                                    fill: var(--primary-color);
                                                     height: 24px;
                                                     width: 24px;
-                                                    stroke: var(--ihf-tp-q);
+                                                    stroke: var(--primary-color);
                                                     stroke-width: 2;
                                                     overflow: visible;
                                                   "
@@ -3882,10 +3882,10 @@
                                                   focusable="false"
                                                   style="
                                                     display: block;
-                                                    fill: var(--ihf-tp-q);
+                                                    fill: var(--primary-color);
                                                     height: 24px;
                                                     width: 24px;
-                                                    stroke: var(--ihf-tp-q);
+                                                    stroke: var(--primary-color);
                                                     stroke-width: 2;
                                                     overflow: visible;
                                                   "
@@ -4641,10 +4641,10 @@
                                                   focusable="false"
                                                   style="
                                                     display: block;
-                                                    fill: var(--ihf-tp-q);
+                                                    fill: var(--primary-color);
                                                     height: 24px;
                                                     width: 24px;
-                                                    stroke: var(--ihf-tp-q);
+                                                    stroke: var(--primary-color);
                                                     stroke-width: 2;
                                                     overflow: visible;
                                                   "
@@ -5237,10 +5237,10 @@
                                                   focusable="false"
                                                   style="
                                                     display: block;
-                                                    fill: var(--ihf-tp-q);
+                                                    fill: var(--primary-color);
                                                     height: 24px;
                                                     width: 24px;
-                                                    stroke: var(--ihf-tp-q);
+                                                    stroke: var(--primary-color);
                                                     stroke-width: 2;
                                                     overflow: visible;
                                                   "
@@ -5555,12 +5555,12 @@
                                                               style="
                                                                 display: block;
                                                                 fill: var(
-                                                                  --ihf-tp-q
+                                                                  --primary-color
                                                                 );
                                                                 height: 24px;
                                                                 width: 24px;
                                                                 stroke: var(
-                                                                  --ihf-tp-q
+                                                                  --primary-color
                                                                 );
                                                                 stroke-width: 2;
                                                                 overflow: visible;
@@ -5923,12 +5923,12 @@
                                                               style="
                                                                 display: block;
                                                                 fill: var(
-                                                                  --ihf-tp-q
+                                                                  --primary-color
                                                                 );
                                                                 height: 24px;
                                                                 width: 24px;
                                                                 stroke: var(
-                                                                  --ihf-tp-q
+                                                                  --primary-color
                                                                 );
                                                                 stroke-width: 2;
                                                                 overflow: visible;
@@ -6262,12 +6262,12 @@
                                                               style="
                                                                 display: block;
                                                                 fill: var(
-                                                                  --ihf-tp-q
+                                                                  --primary-color
                                                                 );
                                                                 height: 24px;
                                                                 width: 24px;
                                                                 stroke: var(
-                                                                  --ihf-tp-q
+                                                                  --primary-color
                                                                 );
                                                                 stroke-width: 2;
                                                                 overflow: visible;
