--- a/signup_login.html
+++ b/signup_login.html
@@ -1155,7 +1155,7 @@
                                               style="
                                                 background: var(
                                                   --comboInputGroup_backgroundColor_invalid,
-                                                  var(--f-p-k-v-lb)
+                                                  var(--light-danger-color)
                                                 );
                                                 border-radius: 0px 0px 8px 8px;
                                                 inset: 0px 0px -1px;
@@ -1201,19 +1201,19 @@
                                                 border-radius: 0px 0px 8px 8px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 1;
@@ -2552,7 +2552,7 @@
                                               style="
                                                 background: var(
                                                   --comboInputGroup_backgroundColor_invalid,
-                                                  var(--f-p-k-v-lb)
+                                                  var(--light-danger-color)
                                                 );
                                                 border-radius: 8px 8px 0px 0px;
                                                 inset: 0px 0px -1px;
@@ -2593,19 +2593,19 @@
                                                 border-radius: 8px 8px 0px 0px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 1;
@@ -2624,7 +2624,7 @@
                                               style="
                                                 background: var(
                                                   --comboInputGroup_backgroundColor_invalid,
-                                                  var(--f-p-k-v-lb)
+                                                  var(--light-danger-color)
                                                 );
                                                 border-radius: 0px 0px 8px 8px;
                                                 inset: 0px 0px -1px;
@@ -2665,19 +2665,19 @@
                                                 border-radius: 0px 0px 8px 8px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 1;
@@ -2815,7 +2815,7 @@
                                                 style="
                                                   background: var(
                                                     --comboInputGroup_backgroundColor_invalid,
-                                                    var(--f-p-k-v-lb)
+                                                    var(--light-danger-color)
                                                   );
                                                   border-radius: 8px;
                                                   inset: 0px 0px -1px;
@@ -2855,19 +2855,19 @@
                                                   border-radius: 8px;
                                                   border-top-color: var(
                                                     --comboInputGroup_borderColor_invalid,
-                                                    var(--k-va-tnc)
+                                                    var(--danger-color)
                                                   );
                                                   border-right-color: var(
                                                     --comboInputGroup_borderColor_invalid,
-                                                    var(--k-va-tnc)
+                                                    var(--danger-color)
                                                   );
                                                   border-bottom-color: var(
                                                     --comboInputGroup_borderColor_invalid,
-                                                    var(--k-va-tnc)
+                                                    var(--danger-color)
                                                   );
                                                   border-left-color: var(
                                                     --comboInputGroup_borderColor_invalid,
-                                                    var(--k-va-tnc)
+                                                    var(--danger-color)
                                                   );
                                                   border-width: 1px;
                                                   z-index: 1;
@@ -4536,7 +4536,7 @@
                                             style="
                                               background: var(
                                                 --comboInputGroup_backgroundColor_invalid,
-                                                var(--f-p-k-v-lb)
+                                                var(--light-danger-color)
                                               );
                                               border-radius: 0px 0px 8px 8px;
                                               inset: 0px 0px -1px;
@@ -4581,19 +4581,19 @@
                                               border-radius: 0px 0px 8px 8px;
                                               border-top-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-right-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-bottom-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-left-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-width: 1px;
                                               z-index: 1;
@@ -5930,7 +5930,7 @@
                                             style="
                                               background: var(
                                                 --comboInputGroup_backgroundColor_invalid,
-                                                var(--f-p-k-v-lb)
+                                                var(--light-danger-color)
                                               );
                                               border-radius: 8px 8px 0px 0px;
                                               inset: 0px 0px -1px;
@@ -5971,19 +5971,19 @@
                                               border-radius: 8px 8px 0px 0px;
                                               border-top-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-right-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-bottom-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-left-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-width: 1px;
                                               z-index: 1;
@@ -6002,7 +6002,7 @@
                                             style="
                                               background: var(
                                                 --comboInputGroup_backgroundColor_invalid,
-                                                var(--f-p-k-v-lb)
+                                                var(--light-danger-color)
                                               );
                                               border-radius: 0px 0px 8px 8px;
                                               inset: 0px 0px -1px;
@@ -6043,19 +6043,19 @@
                                               border-radius: 0px 0px 8px 8px;
                                               border-top-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-right-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-bottom-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-left-color: var(
                                                 --comboInputGroup_borderColor_invalid,
-                                                var(--k-va-tnc)
+                                                var(--danger-color)
                                               );
                                               border-width: 1px;
                                               z-index: 1;
@@ -6193,7 +6193,7 @@
                                               style="
                                                 background: var(
                                                   --comboInputGroup_backgroundColor_invalid,
-                                                  var(--f-p-k-v-lb)
+                                                  var(--light-danger-color)
                                                 );
                                                 border-radius: 8px;
                                                 inset: 0px 0px -1px;
@@ -6233,19 +6233,19 @@
                                                 border-radius: 8px;
                                                 border-top-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-right-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-bottom-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-left-color: var(
                                                   --comboInputGroup_borderColor_invalid,
-                                                  var(--k-va-tnc)
+                                                  var(--danger-color)
                                                 );
                                                 border-width: 1px;
                                                 z-index: 1;
