--- a/edit/photos.html
+++ b/edit/photos.html
@@ -697,9 +697,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -764,14 +762,7 @@
                                         line-height: 20px;
                                       "
                                     >
-                                      <span class="ll4r2nl dir dir-ltr">
-                                        Upload at least 4 more photos that
-                                        highlight different aspects of your
-                                        experience. Photos should include
-                                        host/guest interaction, the location
-                                        where you’re hosting, and close-up
-                                        details of the experience.
-                                      </span>
+                                      <span class="ll4r2nl dir dir-ltr">Upload at least 4 more photos that highlight different aspects of your experience. Photos should include host/guest interaction, the location where you’re hosting, and close-up details of the experience.</span>
                                     </div>
                                   </div>
                                 </div>
@@ -937,9 +928,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -1091,9 +1080,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -1245,9 +1232,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -1399,9 +1384,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -1553,9 +1536,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -1707,9 +1688,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -1861,9 +1840,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -2015,9 +1992,7 @@
                                               type="button"
                                               class="_15rpys7s"
                                             >
-                                              <div class="_9d4he4">
-                                                Add caption
-                                              </div>
+                                              <div class="_9d4he4">Add caption</div>
                                             </button>
                                           </div>
                                         </div>
@@ -2901,13 +2876,7 @@
                                 >
                                   <span
                                     class="place__tips-desc-text dir dir-ltr"
-                                  >
-                                    Upload at least 4 more photos that highlight
-                                    different aspects of your experience. Photos
-                                    should include host/guest interaction, the
-                                    location where you’re hosting, and close-up
-                                    details of the experience.
-                                  </span>
+                                  >Upload at least 4 more photos that highlight different aspects of your experience. Photos should include host/guest interaction, the location where you’re hosting, and close-up details of the experience.</span>
                                 </div>
                               </div>
                             </div>
