revert page-shell-mobile__alert-attr-notifcation -> i144hzgs

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -272,7 +272,7 @@
                                 <div class="page-shell-mobile__mb-16">
                                   <section
                                     role="status"
-                                    class="page-shell-mobile__alert-notification page-shell-mobile__alert-attr-notifcation dir dir-ltr"
+                                    class="page-shell-mobile__alert-notification i144hzgs dir dir-ltr"
                                   >
                                     <div class="page-shell-mobile__alert-icon-wrapper dir dir-ltr">
                                       <div class="page-shell-mobile__alert-icon dir dir-ltr">
