--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -3094,7 +3094,7 @@
                     <div data-testid="calendar-grid" class="rbc-calendar">
                       <div class="_45lad6">
                         <div class="_1n3lp0u">
-                          <section role="status" class="page-shell-mobile__alert-attr-notifcation dir dir-ltr">
+                          <section role="status" class="i144hzgs dir dir-ltr">
                             <div class="ccmqn89 dir dir-ltr">
                               <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 48 48"
                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
