--- a/payment.html
+++ b/payment.html
@@ -4959,7 +4959,7 @@
                   <div style="margin-bottom: 16px">
                     <section
                       role="status"
-                      class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr"
+                      class="e1rue1xl i144hzgs dir dir-ltr"
                     >
                       <div class="ccmqn89 dir dir-ltr">
                         <div class="c1mzlq0d dir dir-ltr">
