--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -293,7 +293,7 @@
                                                   >
                                                     <section
                                                       role="status"
-                                                      class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr"
+                                                      class="e1rue1xl i144hzgs dir dir-ltr"
                                                     >
                                                       <div
                                                         class="page-shell-mobile__alert-icon-wrapper dir dir-ltr"
@@ -863,7 +863,7 @@
                                                 >
                                                   <section
                                                     role="status"
-                                                    class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr"
+                                                    class="e1rue1xl i144hzgs dir dir-ltr"
                                                   >
                                                     <div
                                                       class="page-shell-mobile__alert-icon-wrapper dir dir-ltr"
