--- a/transaction_history.html
+++ b/transaction_history.html
@@ -426,7 +426,7 @@
                                     <div class="pb-4">
                                       <section
                                         role="status"
-                                        class="page-shell-mobile__alert-notification page-shell-mobile__alert-attr-notifcation dir dir-ltr"
+                                        class="page-shell-mobile__alert-notification i144hzgs dir dir-ltr"
                                       >
                                         <div class="page-shell-mobile__alert-icon-wrapper dir dir-ltr">
                                           <div class="page-shell-mobile__alert-icon dir dir-ltr">
