--- a/welcome_back.html
+++ b/welcome_back.html
@@ -280,7 +280,7 @@
                                       name="airlock_id" value="" /><input type="hidden" name="redirect_url" value="/" />
                                     <div class="margin__bottom-24">
                                       <section role="status"
-                                        class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr">
+                                        class="e1rue1xl i144hzgs dir dir-ltr">
                                         <div class="page-shell-mobile__alert-icon-wrapper dir dir-ltr">
                                           <div class="page-shell-mobile__alert-icon dir dir-ltr">
                                             <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
